[gd_scene load_steps=2 format=3 uid="uid://tyjky3rimgru"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_dnxqa"]

[node name="GameManager" type="Node"]
script = ExtResource("1_dnxqa")

[connection signal="energy_change" from="." to="." method="_on_energy_change"]
[connection signal="score_change" from="." to="." method="_on_score_change"]
